tests/spec/parse/snapshots/recover_block_multiple_statements.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let result = recover {
      let x = foo();
      x + 1
    };
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "result",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 6,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: RecoverBlock {
                            items: [
                                Let {
                                    binding: Binding {
                                        pattern: Identifier {
                                            identifier: "x",
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 46,
                                                byte_length: 1,
                                            },
                                            binding: None,
                                        },
                                        annotation: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                    },
                                    value: Call {
                                        expression: Identifier {
                                            value: "foo",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 50,
                                                byte_length: 3,
                                            },
                                            resolution: Unresolved,
                                        },
                                        args: [],
                                        spread: None,
                                        type_arguments: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 50,
                                            byte_length: 5,
                                        },
                                        call_kind: Unresolved,
                                    },
                                    mode: Plain,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 42,
                                        byte_length: 13,
                                    },
                                },
                                Binary {
                                    operator: Addition,
                                    left: Identifier {
                                        value: "x",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 61,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                    right: Literal {
                                        literal: Integer {
                                            value: 1,
                                            text: None,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 65,
                                            byte_length: 1,
                                        },
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 61,
                                        byte_length: 5,
                                    },
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            recover_keyword_span: Span {
                                file_id: 0,
                                byte_offset: 28,
                                byte_length: 7,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 28,
                                byte_length: 42,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 55,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 62,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 72,
        },
    },
]
