tests/spec/parse/snapshots/recover_block_nested.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let outer = recover {
      let inner = recover {
        inner_risky()
      };
      outer_risky()
    };
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "outer",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 5,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: RecoverBlock {
                            items: [
                                Let {
                                    binding: Binding {
                                        pattern: Identifier {
                                            identifier: "inner",
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 45,
                                                byte_length: 5,
                                            },
                                            binding: None,
                                        },
                                        annotation: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                    },
                                    value: RecoverBlock {
                                        items: [
                                            Call {
                                                expression: Identifier {
                                                    value: "inner_risky",
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 69,
                                                        byte_length: 11,
                                                    },
                                                    resolution: Unresolved,
                                                },
                                                args: [],
                                                spread: None,
                                                type_arguments: None,
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 69,
                                                    byte_length: 13,
                                                },
                                                call_kind: Unresolved,
                                            },
                                        ],
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        recover_keyword_span: Span {
                                            file_id: 0,
                                            byte_offset: 53,
                                            byte_length: 7,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 53,
                                            byte_length: 35,
                                        },
                                    },
                                    mode: Plain,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 41,
                                        byte_length: 47,
                                    },
                                },
                                Call {
                                    expression: Identifier {
                                        value: "outer_risky",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 94,
                                            byte_length: 11,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 94,
                                        byte_length: 13,
                                    },
                                    call_kind: Unresolved,
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            recover_keyword_span: Span {
                                file_id: 0,
                                byte_offset: 27,
                                byte_length: 7,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 27,
                                byte_length: 84,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 96,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 103,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 113,
        },
    },
]
